fix: mobile menu overlay issue and checkout button issue on mobile

--- a/src/app/cart/page.module.css
+++ b/src/app/cart/page.module.css
@@ -97,6 +97,7 @@
 
   .productsContainer {
     padding: 0 1rem 0 1rem;
+    margin: 0;
   }
 
   .checkoutContainer {
@@ -111,9 +112,10 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
     padding: 2rem;
     border-top: 1px solid grey;
+    background-color: white;
     z-index: 999;
   }
 
