--- a/src/components/banner/SlidingBanner.module.css
+++ b/src/components/banner/SlidingBanner.module.css
@@ -8,6 +8,7 @@
   height: 30px;
   overflow: hidden;
   background-color: #294a70;
+  color: white
 }
 
 .textContainer {
