--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -51,11 +51,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: white;
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
+  z-index: 1000
 }
 
 .open {
